[gd_scene load_steps=8 format=3 uid="uid://di51kkc51cbhf"]

[ext_resource type="Script" path="res://scripts/cutscenes/Cutscene.gd" id="1_8yita"]
[ext_resource type="StyleBox" uid="uid://b8iynxcxxrgmq" path="res://scenes/cutscenes/cutsceneBoxTheme.tres" id="2_ommmk"]
[ext_resource type="Script" path="res://scripts/cutscenes/Typewriter.gd" id="4_ld4jv"]
[ext_resource type="Texture2D" uid="uid://cxv52dq4jai7b" path="res://assets/sprites/clickweiterHint.png" id="4_q35s7"]

[sub_resource type="Animation" id="Animation_tv4xh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_dfiw0"]
resource_name = "blink"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ghd1h"]
_data = {
"RESET": SubResource("Animation_tv4xh"),
"blink": SubResource("Animation_dfiw0")
}

[node name="Cutscene" type="Node2D"]
script = ExtResource("1_8yita")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="background" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -984.0
offset_top = -563.0
offset_right = 977.0
offset_bottom = 527.0
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_ommmk")

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0

[node name="LeftRibbon" type="Panel" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(384, 0)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_ommmk")

[node name="ClickNextHint" type="TextureRect" parent="Control/HBoxContainer/LeftRibbon"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 75.0
offset_bottom = -50.0
grow_vertical = 0
scale = Vector2(0.605, 0.605)
texture = ExtResource("4_q35s7")
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/HBoxContainer/LeftRibbon/ClickNextHint"]
libraries = {
"": SubResource("AnimationLibrary_ghd1h")
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Picture" type="Panel" parent="Control/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 720)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_ommmk")

[node name="Text" type="Panel" parent="Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("2_ommmk")
script = ExtResource("4_ld4jv")

[node name="TypewriterAudio" type="AudioStreamPlayer2D" parent="Control/HBoxContainer/VBoxContainer/Text"]
position = Vector2(572, -184)
bus = &"TypewriterPitcher"

[node name="Label" type="Label" parent="Control/HBoxContainer/VBoxContainer/Text"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Change the text to be displayed in the Cutscene root export variable!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true
text_overrun_behavior = 3
visible_characters_behavior = 1

[node name="RightRibbon" type="Panel" parent="Control/HBoxContainer"]
custom_minimum_size = Vector2(384, 0)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_ommmk")

[node name="HoldToSkip" type="Label" parent="Control/HBoxContainer/RightRibbon"]
self_modulate = Color(1, 1, 1, 0.145098)
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 26
text = "Hold 'c' to Skip"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="Control/HBoxContainer/RightRibbon/HoldToSkip"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 2.0
show_percentage = false

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
